2010-02-07  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Dan Bernstein.

        Fix the following bugs:
        https://bugs.webkit.org/show_bug.cgi?id=18926 - dt:after generate a line break. Boost documentation page renders poorly
        https://bugs.webkit.org/show_bug.cgi?id=7276 - Most W3C padding related tests fail

        css2.1/t0803-c5504-imrgn-l-02-b-ag-expected.html and css2.1/t0804-c5509-ipadn-l-02-b-ag-expected.html have been rebaselined
        because the original expected values are incorrect, judging from the test description and how IE 8.0, Firefox 3.6, and Opera 10.10 render the pages.
        fast/dom/clone-node-dynamic-style-expected.html have been also rebaselined because the original expected values assumes a line break.
        Expected values under platform/qt need not be updated because the tests are in the Skipped file for the platform.

        * fast/css/inline-element-line-break.html: Added.
        * fast/css/pseudo-element-line-break.html: Added.
        * platform/mac/css2.1/t0803-c5504-imrgn-l-02-b-ag-expected.checksum:
        * platform/mac/css2.1/t0803-c5504-imrgn-l-02-b-ag-expected.png:
        * platform/mac/css2.1/t0803-c5504-imrgn-l-02-b-ag-expected.txt:
        * platform/mac/css2.1/t0804-c5509-ipadn-l-02-b-ag-expected.checksum:
        * platform/mac/css2.1/t0804-c5509-ipadn-l-02-b-ag-expected.png:
        * platform/mac/css2.1/t0804-c5509-ipadn-l-02-b-ag-expected.txt:
        * platform/mac/fast/css/inline-element-line-break-expected.checksum: Added.
        * platform/mac/fast/css/inline-element-line-break-expected.png: Added.
        * platform/mac/fast/css/inline-element-line-break-expected.txt: Added.
        * platform/mac/fast/css/pseudo-element-line-break-expected.checksum: Added.
        * platform/mac/fast/css/pseudo-element-line-break-expected.png: Added.
        * platform/mac/fast/css/pseudo-element-line-break-expected.txt: Added.
        * platform/mac/fast/dom/clone-node-dynamic-style-expected.checksum:
        * platform/mac/fast/dom/clone-node-dynamic-style-expected.png:
        * platform/mac/fast/dom/clone-node-dynamic-style-expected.txt:
2010-02-07  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Dan Bernstein.

        Fix the following bugs:
        https://bugs.webkit.org/show_bug.cgi?id=18926 - dt:after generate a line break. Boost documentation page renders poorly
        https://bugs.webkit.org/show_bug.cgi?id=7276 - Most W3C padding related tests fail

        Tests: fast/css/inline-element-line-break.html
               fast/css/pseudo-element-line-break.html

        findNextLineBreak() unconditionally allowed lines to break between elements when no other line breaking opportunity had been found,
        but that was unnecessary and led to incorrect layout. Disallow that kind of line breaks.

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::findNextLineBreak):

Canonical link: https://commits.webkit.org/45849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54536 268f45cc-cd09-0410-ab3c-d52691b4dbfc